--- a/styles/calendar.scss
+++ b/styles/calendar.scss
@@ -1,7 +1,7 @@
 // стили сетки календаря и заголовка календаря с днями недели
 .header {
     padding-top: 10px;
-    margin-left: 50px;
+    margin-left: 200px;
     display: flex;
     position: relative;
     top: 0px;
@@ -49,6 +49,8 @@
 .calendar__day-label {
     height: 100px;
     width: 120px;
+    display: flex;
+    flex-direction: column;
 }
 
 .day-label__day-name {
@@ -56,15 +58,25 @@
     display: block;
     text-align: center;
     color: darkgray;
-    font-size: 22px;
+    font-size: 15px;
+    &.active {
+        color: cornflowerblue;
+    }
 }
 
 .day-label__day-number {
-    padding-top: 10px;
+    border-radius: 100%;
+    margin: auto;
+    width: 40px;
+    padding: 5px;
     display: block;
     color: darkgray;
     text-align: center;
     font-size: 25px;
+    &.active {
+        color: white;
+        background-color: cornflowerblue;
+    }
 }
 
 .time-slot {
@@ -75,9 +87,4 @@
         position: relative;
         top: -10px;
     }
-}
-
-.active {
-    background-color: green;
-    color: red;
 }
