--- a/styles/calendar.scss
+++ b/styles/calendar.scss
@@ -1,15 +1,23 @@
 // стили сетки календаря и заголовка календаря с днями недели
 .header {
-    padding-top: 10px;
-    margin-left: 200px;
+    padding: 5px;
+    height: 50px;
+    width: 100%;
     display: flex;
     position: relative;
     top: 0px;
-    width: 100vw;
+    border-bottom: 1px solid grey;
 }
 
 .create-event-btn {
-    margin-right: 50px;
+    border-radius: 25%;
+    font-size: 15px;
+    display: flex;
+    margin-left: 50px;
+    align-items: center;
+    box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
+    -moz-box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
+    box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
 }
 
 .navigation {
@@ -17,6 +25,7 @@
 }
 
 .calendar {
+    top: 1px;
     overflow: auto;
     &__header {
         padding-left: 50px;
