--- a/styles/create-event.scss
+++ b/styles/create-event.scss
@@ -1,1 +1,67 @@
 // стили формы события внутри модального окна
+.create-event {
+    position: relative;
+    &__close-btn {
+        margin-left: 93%;
+        transform: rotate(45deg);
+        font-size: 27px;
+        background-color: transparent;
+        cursor: pointer;
+        outline: none;
+        border: none;
+    }
+}
+
+.event-form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 360px;
+    position: relative;
+    & input[type='text'] {
+        border-bottom: 1px solid #1a73e8;
+        margin: 30px 0 50px 30px;
+    }
+    &__field {
+        line-height: 26px;
+        border: none;
+        &[name='description'] {
+            margin: 46px 0 0 30px;
+            height: 100px;
+        }
+    }
+    &__time {
+        display: flex;
+        box-sizing: border-box;
+        margin: 0 0 0 30px;
+        padding: 0;
+        border: none;
+    }
+    &__submit-btn {
+        border: none;
+        background-color: #1a73e8;
+        position: absolute;
+        bottom: 0px;
+        right: -3px;
+        width: 120px;
+        height: 35px;
+        color: #ffffff;
+        font-size: 16px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+}
+
+.create-event-btn {
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    border: none;
+    box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    &-text {
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: 0.25px;
+        padding: 0 12px 0 7px;
+    }
+}
