--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,180 +1,355 @@
 .page {
-  height: 100vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  align-items: center;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
 }
 
 .button {
-  height: 40px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  outline: none;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
+    height: 40px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 .icon-button {
-  outline: none;
-  border: none;
-  cursor: pointer;
-  background: transparent;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background: transparent;
 }
 
 .modal {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .modal__content {
-  background: #fff;
-  padding: 16px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+    background: #fff;
+    padding: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
 }
 
 .overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(204, 204, 204, 0.2705882353);
-  z-index: 10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(204, 204, 204, 0.2705882353);
+    z-index: 10;
 }
 
 .popup__content {
-  position: absolute;
-  background: #fff;
-  padding: 16px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+    position: absolute;
+    background: #fff;
+    padding: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 .header {
-  padding: 5px;
-  height: 50px;
-  width: 100%;
-  display: flex;
-  position: relative;
-  top: 0px;
-  border-bottom: 1px solid grey;
+    padding: 5px;
+    height: 50px;
+    width: 100%;
+    display: flex;
+    position: relative;
+    top: 0px;
+    border-bottom: 1px solid grey;
 }
 
 .create-event-btn {
-  border-radius: 25%;
-  font-size: 15px;
-  display: flex;
-  margin-left: 50px;
-  align-items: center;
-  box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
-  -moz-box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
-  box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
+    border-radius: 25%;
+    font-size: 15px;
+    display: flex;
+    margin-left: 50px;
+    align-items: center;
+    box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
+    -moz-box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
+    box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.38);
 }
 
-.navigation {
-  margin-left: 10px;
+.navigation__today-btn {
+    margin-left: 20px;
+    margin-right: 10px;
 }
 
 .calendar {
-  top: 1px;
-  overflow: auto;
+    top: 1px;
+    overflow: auto;
 }
+
 .calendar__header {
-  padding-left: 50px;
-  display: flex;
-  position: absolute;
-  top: 50px;
-  z-index: 1;
-  background-color: white;
+    padding-left: 50px;
+    display: flex;
+    position: absolute;
+    top: 50px;
+    z-index: 1;
+    background-color: white;
 }
+
 .calendar__week-container {
-  display: flex;
-  margin-top: 10px;
+    display: flex;
+    margin-top: 10px;
 }
+
 .calendar__time-scale {
-  margin-top: 100px;
+    margin-top: 100px;
 }
+
 .calendar__week {
-  display: flex;
-  margin-top: 100px;
+    display: flex;
+    margin-top: 100px;
 }
+
 .calendar__time-slot {
-  height: 60px;
-  width: 120px;
-  border-bottom: 1px solid;
-  border-right: 1px solid;
-  border-color: rgba(128, 128, 128, 0.3019607843);
+    height: 60px;
+    width: 120px;
+    border-bottom: 1px solid;
+    border-right: 1px solid;
+    border-color: rgba(128, 128, 128, 0.3019607843);
 }
 
 .calendar__day-label {
-  height: 100px;
-  width: 120px;
-  display: flex;
-  flex-direction: column;
+    height: 100px;
+    width: 120px;
+    display: flex;
+    flex-direction: column;
 }
 
 .day-label__day-name {
-  margin-top: 10px;
-  display: block;
-  text-align: center;
-  color: darkgray;
-  font-size: 15px;
+    margin-top: 10px;
+    display: block;
+    text-align: center;
+    color: darkgray;
+    font-size: 15px;
 }
+
 .day-label__day-name.active {
-  color: cornflowerblue;
+    color: cornflowerblue;
 }
 
 .day-label__day-number {
-  border-radius: 100%;
-  margin: auto;
-  width: 40px;
-  padding: 5px;
-  display: block;
-  color: darkgray;
-  text-align: center;
-  font-size: 25px;
+    border-radius: 100%;
+    margin: auto;
+    width: 40px;
+    padding: 5px;
+    display: block;
+    color: darkgray;
+    text-align: center;
+    font-size: 25px;
 }
+
 .day-label__day-number.active {
-  color: white;
-  background-color: cornflowerblue;
+    color: white;
+    background-color: cornflowerblue;
 }
 
 .time-slot {
-  height: 60px;
-  width: 50px;
-  text-align: center;
-}
-.time-slot__time {
-  position: relative;
-  top: -10px;
+    height: 60px;
+    width: 50px;
+    text-align: center;
 }
 
-.event {
-  background-color: cornflowerblue;
-  padding: 10px;
-  border-radius: 5%;
-  width: 90%;
+.time-slot__time {
+    position: relative;
+    top: -10px;
 }
-.event:hover {
-  cursor: pointer;
+
+.create-event {
+    position: relative;
+}
+
+.create-event__close-btn {
+    margin-left: 93%;
+    transform: rotate(45deg);
+    font-size: 27px;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+    border: none;
+}
+
+.event-form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 360px;
+    position: relative;
+}
+
+.event-form input[type=text] {
+    border-bottom: 1px solid #1a73e8;
+    margin: 30px 0 50px 30px;
+}
+
+.event-form__field {
+    line-height: 26px;
+    border: none;
+}
+
+.event-form__field[name=description] {
+    margin: 46px 0 0 30px;
+    height: 100px;
+}
+
+.event-form__time {
+    display: flex;
+    box-sizing: border-box;
+    margin: 0 0 0 30px;
+    padding: 0;
+    border: none;
+}
+
+.event-form__submit-btn {
+    border: none;
+    background-color: #1a73e8;
+    position: absolute;
+    bottom: 0px;
+    right: -3px;
+    width: 120px;
+    height: 35px;
+    color: #ffffff;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.create-event-btn {
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    border: none;
+    box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.create-event-btn-text {
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.25px;
+    padding: 0 12px 0 7px;
+}
+
+.create-event {
+    position: relative;
+}
+
+.create-event__close-btn {
+    margin-left: 93%;
+    transform: rotate(45deg);
+    font-size: 27px;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+    border: none;
+}
+
+.event-form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 360px;
+    position: relative;
+}
+
+.event-form input[type=text] {
+    border-bottom: 1px solid #1a73e8;
+    margin: 30px 0 50px 30px;
+}
+
+.event-form__field {
+    line-height: 26px;
+    border: none;
+}
+
+.event-form__field[name=description] {
+    margin: 46px 0 0 30px;
+    height: 100px;
+}
+
+.event-form__time {
+    box-sizing: border-box;
+    margin: 0 0 0 30px;
+    padding: 0;
+    border: none;
+}
+
+.event-form__submit-btn {
+    border: none;
+    background-color: #1a73e8;
+    position: absolute;
+    bottom: 0px;
+    right: -3px;
+    width: 120px;
+    height: 35px;
+    color: #ffffff;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.create-event-btn {
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    border: none;
+    box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.create-event-btn-text {
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.25px;
+    padding: 0 12px 0 7px;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font-size: 18px;
-  font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
 }
 
+
 /*# sourceMappingURL=styles.css.map */
+
+.line_colomn {
+    display: inline-block;
+    position: absolute;
+    right: 115px;
+    top: -5px;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background-color: red;
+    z-index: 0;
+}
+
+.line_colomn:hover {
+    cursor: pointer;
+}
+
+.line {
+    display: inline-block;
+    position: absolute;
+    right: 1px;
+    top: -1px;
+    width: 120px;
+    height: 2px;
+    background-color: red;
+    z-index: 0;
+}
